add: Fix README and index.html

--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jek | Personal Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Jek's Portfolio | Software Engineer</title>
+  <meta name="title" content="Jek's Portfolio | Software Engineer">
+  <meta name="description" content="Explore Jek's portfolio showcasing creative web development projects, design, and innovative digital solutions.">
+  <meta name="keywords" content="portfolio, software engineer, web development, creative, design, projects">
+  <link rel="canonical" href="https://revou-fsse-feb25.github.io/milestone-1-MuhammadIrfanDzaky/">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://revou-fsse-feb25.github.io/milestone-1-MuhammadIrfanDzaky/">
+  <meta property="og:title" content="Jek's Portfolio | Software Engineer">
+  <meta property="og:description" content="Explore Jek's portfolio showcasing creative web development projects, design, and innovative digital solutions.">
+  <meta property="og:image" content="BELUM ADA">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://revou-fsse-feb25.github.io/milestone-1-MuhammadIrfanDzaky/">
+  <meta name="twitter:title" content="Jek's Portfolio | Software Engineer">
+  <meta name="twitter:description" content="Explore Jek's portfolio showcasing creative web development projects, design, and innovative digital solutions.">
+  <meta name="twitter:image" content="BELUM ADA">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="indexcoba.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  
   <main>
     <div class="container top-row">
       <aside class="sidebar">
@@ -38,92 +50,127 @@
           </div>
         </div>
       </aside>
-      
       <div class="top-content">
-        <section id="home">
+        <div class="header-row">
           <h1>Welcome, My Friend! 👋🏼</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id natus ipsa impedit corrupti voluptates sunt ut voluptatum alias, distinctio, quos debitis molestiae esse aliquid aspernatur nisi nobis omnis voluptate. Qui similique laborum, accusamus iure, odio expedita totam eveniet quas, deserunt quod natus? Tempora eius nemo laboriosam neque saepe esse velit?</p>
-        </section>
+          <nav>
+            <ul>
+              <li><a href="#about">About Me</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
         <section id="about">
           <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint nobis quibusdam aspernatur corrupti error odio non ea dolorum hic fugit libero ullam quasi fuga veniam ut nihil officia expedita quisquam doloribus molestias quos, illum ipsum ipsa? Quidem mollitia veniam quis aliquid saepe labore perspiciatis totam qui impedit, a ea alias!</p>
-          <br>
+          <p>
+            Hi, I’m Muhammad Irfan Dzaky – a dedicated Software Engineer Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus id quos quas et repellat odit doloribus porro. Voluptatem voluptas nobis cumque laboriosam odit obcaecati magni nulla minima exercitationem. Ducimus eum ab consequuntur recusandae sed, impedit hic. Libero, accusamus. Aperiam saepe doloremque consectetur necessitatibus hic eligendi, earum quis aspernatur asperiores voluptates sapiente! Necessitatibus omnis voluptas quod optio autem explicabo maxime illo quasi quo neque perferendis ratione, ex corrupti aspernatur cum esse consequuntur expedita impedit ipsum vel. Dolor ducimus maxime quae hic quis eligendi, porro deleniti odio itaque numquam ratione vero vel accusantium earum excepturi recusandae, ea omnis distinctio? Esse sunt nisi odit laboriosam molestiae nobis enim nulla vitae non velit, perspiciatis ex porro! Consectetur mollitia assumenda fuga odio eius. Voluptates?
+          </p>
+        </section>
+      </div>
+    </div>
+    <div class="container bottom-row">
+      <div class="bottom-content">
+        <section>
           <p><b>Education:</b></p>
-            <li><b>Universitas Pembangunan Panca Budi</b> [Sarjana Komputer (S.Kom)] [2020-2024]</b></li>
-            <p><b>Thesis:</b> Web-Based Management Information System Design for Internship Student Report Data for Supervisors (Case Study: Department of Communication and Information Technology Medan)</p>
+          <ul>
+            <li><b>Universitas Pembangunan Panca Budi</b> [Sarjana Komputer (S.Kom)] [2020-2024]</li>
+          </ul>
+          <p><b>Thesis:</b> Web-Based Management Information System Design for Internship Student Report Data for Supervisors (Case Study: Department of Communication and Information Technology Medan)</p>
+          <p><b>GPA:</b> 3.89/4.00</p>
           <br>
           <p><b>Experience:</b></p>
+          <ul>
             <li><b>Dinas Komunikasi dan Informatika Kota Medan</b> [Internship] [May 2023 - Sep 2023]</li>
-            <p>Developed a web-based system to streamline the collection and management of daily and final student internship reports. The system enhanced data organization, accessibility, and collaboration among mentors and students.</p>
+          </ul>
+          <p>Developed a web-based system to streamline the collection and management of daily and final student internship reports. The system enhanced data organization, accessibility, and collaboration among mentors and students.</p>
           <br>
           <p><b>Skills:</b></p>
+          <ul>
             <li><b>Programming Language:</b> HTML, CSS, JavaScript, PHP</li>
             <li><b>Framework:</b> Bootstrap</li>
             <li><b>Database:</b> MySQL</li>
             <li><b>Tools:</b> Visual Studio Code, XAMPP, Git, GitHub, Slack, Figma</li>
+          </ul>
           <br>
           <p><b>Interest:</b></p>
+          <ul>
             <li><b>Web Development</b></li>
             <li><b>Software Development</b></li>
             <li><b>Mobile Development</b></li>
             <li><b>UI/UX Design</b></li>
             <li><b>Project Management</b></li>
+          </ul>
         </section>
-      </div>
-    </div>
-    
-    <div class="container bottom-row">
-      <div class="bottom-content">
         <section id="projects">
           <h2>Projects</h2>
           <div class="projects-grid">
             <article class="project">
-              <h3>Project Title 1</h3>
+              <h3>Porsche 911 GT3 RS</h3>
               <div class="project-image-container">
                 <img src="asset/project1.jpg" alt="Project Image">
               </div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dignissimos.</p>
-              <p><b>Tools/Framework:</b> Lorem ipsum dolor sit amet.</p>
+              <p>The Porsche 911 GT3 RS epitomizes track-focused performance, combining lightweight engineering, aerodynamic design, and exceptional handling for pure driving pleasure.</p>
+              <p><b>Engine:</b> 4.0-liter naturally aspirated flat-six</p>
+              <p><b>Power:</b> Approximately 520 horsepower</p>
+              <p><b>Transmission:</b> 7-speed PDK dual-clutch gearbox</p>
+              <p><b>Acceleration:</b> 0–60 mph in about 3.2 seconds</p>
             </article>
             <article class="project">
-              <h3>Project Title 1</h3>
+              <h3>BMW M3 E30</h3>
               <div class="project-image-container">
                 <img src="asset/project2.jpg" alt="Project Image">
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, suscipit.</p>
-              <p><b>Tools/Framework:</b> Lorem ipsum dolor sit amet.</p>
+              <p>The BMW M3 E30 is an iconic sports sedan renowned for its agile handling, precise engineering, and enduring motorsport legacy.</p>
+              <p><b>Engine:</b> 2.3-liter inline-four (S14 engine)</p>
+              <p><b>Power:</b> Approximately 192 horsepower</p>
+              <p><b>Transmission:</b> 5-speed manual gearbox</p>
+              <p><b>Acceleration:</b> 0–60 mph in about 6.5-7 seconds</p>
             </article>
             <article class="project">
-              <h3>Project Title 1</h3>
+              <h3>Porsche 918</h3>
               <div class="project-image-container">
                 <img src="asset/project3.jpg" alt="Project Image">
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, suscipit.</p>
-              <p><b>Tools/Framework:</b> Lorem ipsum dolor sit amet.</p>
+              <p>The Porsche 918 harnesses hybrid power, fusing cutting-edge technology with breathtaking acceleration, extraordinary design, and uncompromised performance for elite enthusiasts.</p>
+              <p><b>Engine:</b> 4.6-liter naturally aspirated V8 paired with two electric motors</p>
+              <p><b>Power:</b> Approximately 887 horsepower</p>
+              <p><b>Transmission:</b> 7-speed dual-clutch (PDK)</p>
+              <p><b>Acceleration:</b> 0–60 mph in about 2.5 seconds</p>
             </article>
           </div>
         </section>
         <section id="contact">
           <h2>Contact Me</h2>
-          <form class="contact-form" action="#" method="post">
-            <div class="form-row">
-              <div class="form-group">
-                <input type="text" id="contact-name" name="name" placeholder="Full Name" required>
+          <div class="contact-container">
+            <div class="map-container">
+              <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127419.09354203394!2d98.41880065619105!3d3.6224920441536916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3030d60114970f8d%3A0x3039d80b220cbd0!2sBinjai%2C%20Kota%20Binjai%2C%20Sumatera%20Utara!5e0!3m2!1sid!2sid!4v1740021974079!5m2!1sid!2sid" 
+                loading="lazy">
+              </iframe>
+            </div>
+            <form class="contact-form" action="#" method="post">
+              <div class="form-row">
+                <div class="form-group">
+                  <input type="text" id="contact-name" name="name" placeholder="Full Name" required>
+                </div>
+                <div class="form-group">
+                  <input type="email" id="contact-email" name="email" placeholder="Email Address" required>
+                </div>
               </div>
               <div class="form-group">
-                <input type="email" id="contact-email" name="email" placeholder="Email Address" required>
+                <input id="contact-subject" name="subject" placeholder="Subject" required>
               </div>
-            </div>
-            <div class="form-group">
-              <textarea id="contact-message" name="message" rows="4" placeholder="Your Message" required></textarea>
-            </div>
-            <button type="submit">Send Message</button>
-          </form>
-        </section>
+              <div class="form-group">
+                <textarea id="contact-message" name="message" rows="4" placeholder="Your Message" required></textarea>
+              </div>
+              <button type="submit">Send Message</button>
+            </form>
+          </div>
+        </section>        
       </div>
     </div>
   </main>
-  
   <footer>
     <p>Created by Me.</p>
   </footer>
